test/data/fail/expressions/member.js
super;
//<>
import.meta;
//<>
new.target;
